[tool]
[tool.poetry]
name = "asamplelib"
version = "0.2.2"
description = "Python Boilerplate contains all the "
authors = ["Tomestro <tomestro@gmx.net>"]
license = "Apache Software License 2.0"

readme = "README.rst"

homepage = "https://github.com/tomestro/asamplelib"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = "==19.10b0"
bump2version = "*"
coverage = "*"
flake8 = "*"
isort = "*"
pre-commit = "*"
pytest = "*"
pytest-runner = "*"
sphinx = "*"
tox = "*"
twine = "*"
watchdog = "*"
wheel = "*"
